<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="falcon496program@gmail.com">taka</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>key_event_msgs</depend>
  <depend>key_event_nodes</depend>
  <depend>slam_toolbox</depend>
  <depend>ira_laser_tools</depend>
  <depend>ignition-gazebo6</depend>
  <depend>ignition-plugin1</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
